--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>GrapesJS Plugin</title>
-  <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/grapesjs"></script>
   <script src="dist/grapesjs-mjml.min.js"></script>
   <style>
+    @import './node_modules/grapesjs/dist/css/grapes.min.css';
+
     body,
     html {
       height: 100%;
@@ -44,41 +44,6 @@
         </mj-style>
       </mj-head>
       <mj-body>
-        <!-- Company Header -->
-        <mj-section background-color="#f0f0f0">
-          <mj-column>
-            <mj-text font-family="Barlow">A first line of text</mj-text>
-            <mj-spacer height="50px" />
-          </mj-column>
-        </mj-section>
-
-        <!-- Image Header -->
-        <mj-section background-url="http://1.bp.blogspot.com/-TPrfhxbYpDY/Uh3Refzk02I/AAAAAAAALw8/5sUJ0UUGYuw/s1600/New+York+in+The+1960's+-+70's+(2).jpg"
-          background-size="cover" background-repeat="no-repeat">
-          <mj-column>
-            <mj-text css-class="slogan" align="center" color="#fff" font-size="40px" font-family="Helvetica Neue">Slogan here</mj-text>
-            <mj-button background-color="#F63A4D" href="#">
-              Promotion
-            </mj-button>
-          </mj-column>
-        </mj-section>
-
-        <!-- Intro text -->
-        <mj-wrapper background-color="#ffe9f7" padding="10px">
-          <mj-section background-color="#eaeffa">
-            <mj-group background-color="#fffadd">
-              <mj-column>
-                <mj-text font-style="italic" font-size="20px" font-family="Helvetica Neue" color="#626262">My Awesome Text</mj-text>
-                <mj-text color="#525252">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rutrum enim eget magna efficitur, eu semper augue semper.
-                  Aliquam erat volutpat. Cras id dui lectus. Vestibulum sed finibus lectus, sit amet suscipit nibh. Proin nec
-                  commodo purus. Sed eget nulla elit. Nulla aliquet mollis faucibus.
-                </mj-text>
-                <mj-button background-color="#F45E43" href="#">Learn more</mj-button>
-              </mj-column>
-            </mj-group>
-          </mj-section>
-        </mj-wrapper>
 
         <!-- Side image -->
         <mj-section background-color="white">
@@ -106,9 +71,9 @@
             <img class="item" src="https://source.unsplash.com/random/200x141" alt="Example image">
             <img class="item" src="https://source.unsplash.com/random/200x142" alt="Example image">
             <img class="item" src="https://source.unsplash.com/random/200x143" alt="Example image">
-            <img class="item" src="https://source.unsplash.com/random/200x144" alt="Example image"> 
+            <img class="item" src="https://source.unsplash.com/random/200x144" alt="Example image">
             <img class="item" src="https://source.unsplash.com/random/200x145" alt="Example image">
-            <img class="item" src="https://source.unsplash.com/random/200x146" alt="Example image">     
+            <img class="item" src="https://source.unsplash.com/random/200x146" alt="Example image">
           </div>
         </mj-raw>
         <!-- Icons -->
@@ -147,14 +112,18 @@
   </div>
 
 
-  <script type="text/javascript">
+  <script type="module">
+    import './node_modules/grapesjs/dist/grapes.min.js';
+
     var editor = grapesjs.init({
       height: '100%',
       noticeOnUnload: 0,
-      storageManager: { autoload: 0 },
+      storageManager: {
+        autoload: 1,
+        autosave: 1,
+      },
       container: '#gjs',
       fromElement: true,
-
       plugins: ['grapesjs-mjml'],
       pluginsOpts: {
         'grapesjs-mjml': {}
