--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     var editor = grapesjs.init({
       height: '100%',
       noticeOnUnload: 0,
-      storageManager: { autoload: 0 },
+      storageManager: { autoload: 1, autosave: true},
       container: '#gjs',
       fromElement: true,
 
