--- a/index.html
+++ b/index.html
@@ -164,7 +164,33 @@
       plugins: ['grapesjs-mjml'],
       pluginsOpts: {
         'grapesjs-mjml': {}
-      }
+      },
+      assetManager: {
+        storageType: '',
+        storeOnChange: true,
+        storeAfterUpload: true,
+        // upload: '/assets/upload', //for temporary storage
+        assets: [],
+        uploadFile: function (e) {
+          var files = e.dataTransfer ? e.dataTransfer.files : e.target.files;
+          var formData = new FormData();
+          for (var i in files) {
+            formData.append('file-' + i, files[i]) //containing all the selected images from local
+          }
+          var httpRequest = new XMLHttpRequest();
+          httpRequest.open("POST", "/upload_image.php",true);
+          // httpRequest.setRequestHeader("Content-type","multipart/form‑data");
+          httpRequest.send(formData);
+          httpRequest.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+              var result = JSON.parse(this.responseText)
+              editor.AssetManager.add(result['data']); //adding images to asset
+              // manager of GrapesJS
+
+            }
+          };
+        },
+      },
     });
 
     // ADD SAVE/LOAD BUTTONS
@@ -212,7 +238,6 @@
       xhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
       xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-          console.log(this.responseText);
           editor.Modal.close();
         }
       };
@@ -264,10 +289,8 @@
         xhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
         xhttp.onreadystatechange = function() {
           if (this.readyState == 4 && this.status == 200) {
-            console.log('reponse',JSON.parse(this.responseText));
             let template_names = JSON.parse(this.responseText);
             template_names.forEach(element => {
-              console.log(element)
               let option = document.createElement('option');
               option.value = element;
               option.innerHTML = element;
